fix dir options flicker

--- a/oide/apps/filebrowser/static/filebrowser.css
+++ b/oide/apps/filebrowser/static/filebrowser.css
@@ -12,6 +12,14 @@
   padding: 5px;
 }
 
+.dir-controls {
+  color: #93c54b;
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+}
+
 .breadcrumb {
   margin-bottom: 0;
   padding-top: 20px;
